<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="@color/green_dark"
    tools:context=".onboarding.screen.GoalsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/text_about_goals"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/yellow"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/text_select_three"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/yellow"
        />


    <TextView
        android:id="@+id/tvGoalOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_goal_one"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:background="@drawable/bg_onboard_goal_not_selected"
        />

    <TextView
        android:id="@+id/tvGoalTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_goal_two"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:background="@drawable/bg_onboard_goal_not_selected"
        />

    <TextView
        android:id="@+id/tvGoalThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_goal_three"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:background="@drawable/bg_onboard_goal_not_selected"
        />

    <TextView
        android:id="@+id/tvGoalFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_goal_four"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:background="@drawable/bg_onboard_goal_not_selected"
        />

    <TextView
        android:id="@+id/tvGoalFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_goal_five"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:background="@drawable/bg_onboard_goal_not_selected"
        />

    <TextView
        android:id="@+id/tvGoalSix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_goal_six"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:background="@drawable/bg_onboard_goal_not_selected"
        />

    <TextView
        android:id="@+id/tvGoalSeven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_goal_seven"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        android:background="@drawable/bg_onboard_goal_not_selected"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:id="@+id/tvActivityNextActivityLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_next_button"
            android:textColor="@color/orange_light"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="end"
            android:padding="15dp"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    </LinearLayout>

</ScrollView>