<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:background="@color/green_dark"
    tools:context=".onboarding.screen.GenderAgeScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/text_choose_gender"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/tvGenderMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/text_male"
            android:background="@drawable/bg_onboard_goal_not_selected"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_margin="5dp"
            android:textColor="@color/yellow"
            />

        <TextView
            android:id="@+id/tvGenderFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/text_female"
            android:background="@drawable/bg_onboard_goal_not_selected"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_margin="5dp"
            android:textColor="@color/yellow"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/text_age"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/yellow"
        android:layout_margin="10dp"
        android:padding="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputETAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_dark"
            android:backgroundTint="#36473D"
            android:hint="@string/text_age_hint"
            android:inputType="number"
            android:maxLength="2"
            android:padding="10dp"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_reason"
        android:textColor="@color/orange_light"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:id="@+id/tvActivityNextHeightWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_next_button"
            android:textColor="@color/orange_light"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="end"
            android:padding="15dp"
            android:layout_margin="10dp"
            />
    </LinearLayout>

</LinearLayout>