<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_dark"
    android:paddingTop="20dp"
    tools:context=".onboarding.screen.HeightWeightScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/text_give_height_weight"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textColor="@color/yellow"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="3"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_weight"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            />

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/yellow"
            android:hint="@string/text_in_kg"
            android:inputType="number"
            android:maxLength="3"
            android:textColorHint="@color/green_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_height"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/text_in_cm"
            android:textColor="@color/yellow"
            android:textColorHint="@color/green_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_weight_goal"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            />

        <EditText
            android:id="@+id/etWeightGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/text_in_kg"
            android:textColor="@color/yellow"
            android:textColorHint="@color/green_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <TextView
            android:id="@+id/tvFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_finish"
            android:textColor="@color/orange_light"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="end"
            android:padding="15dp"
            android:layout_margin="10dp"
            />
    </LinearLayout>



</LinearLayout>